--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,26 @@
 
 /* Your CSS Code here. */
+
+.holder {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    width: 100vw; 
+    height: 100vh; 
+    background-color: #f0f0f0; 
+}
+
+/* Style the item */
+.item-1 {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* font-size: 14px; */
+    /* font-weight: bold; */
+    text-align: center;
+    border-radius: 5px; /* Optional: Adds rounded corners */
+}
